파일명 수정

--- a/portfoliocite/index.html
+++ b/portfoliocite/index.html
@@ -46,8 +46,6 @@
             <div class="inner">
                 <h1 class="">I AM AREUM JOEN</h1>
                 <h4>POSITIVE | CREATING | DREAMING WEB PUBLISHER</h4>
-
-                <!-- <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp; <a href="#one" class="btn btn-primary btn-xl page-scroll">Get Started</a> -->
             </div>
         </div>
         <!-- 비디오=>이미지 수정 -->
@@ -139,7 +137,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://jar3543.github.io/j_am/sidmool/index.html" class="gallery-box" data-toggle="modal" data-src="./assets/deer.jpg">
+                    <a href="https://jar3543.github.io/github/sidmool/index.html" class="gallery-box" data-toggle="modal" data-src="./assets/deer.jpg">
                         <img src="./assets/deer.jpg" class="img-responsive" alt="Image 1">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
@@ -153,7 +151,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://jar3543.github.io/j_am/F&B/F&B-010000.html" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
+                    <a href="https://jar3543.github.io/github/F&B/F&B-010000.html" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
                         <img src="./assets/beach.jpg" class="img-responsive" alt="Image 2">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
@@ -168,7 +166,7 @@
                 </div>
 				<div class="clearfix hidden-lg"> </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://jar3543.github.io/tjoeun/portfoliocite2/index2.html" class="gallery-box" data-toggle="modal" data-src="./assets/lake.jpg">
+                    <a href="https://jar3543.github.io/github/portfoliocite/index.html" class="gallery-box" data-toggle="modal" data-src="./assets/lake.jpg">
                         <img src="./assets/lake.jpg" class="img-responsive" alt="Image 3">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
