인트로에서 메인화면으로

--- a/F&B/F&B-000000.html
+++ b/F&B/F&B-000000.html
@@ -9,7 +9,7 @@
     <script>
     // 2초 뒤에 메인화면(F&B-010000)로 이동
     setTimeout(function(){
-      location.href='F&B-010000-5.html';
+      location.href='F&B-010000.html';
     },2000)
 
     </script>
