--- a/F&B/F&B-000000.html
+++ b/F&B/F&B-000000.html
@@ -9,13 +9,12 @@
     <script>
     // 2초 뒤에 메인화면(F&B-010000)로 이동
     setTimeout(function(){
-      location.href='F&B-010000.html';
+      location.href='https://jar3543.github.io/github/F&B/F&B-010000.html';
     },2000)
 
     </script>
   </head>
   <body class="intro">
-    <!-- <h1>F&B logo</h1> -->
     <small>copyright&copy; F&B. All right reserved.</small>
   </body>
 </html>
