드롭다운 지운것 따로 저장

--- a/F&B-드롭다운안지운것/F&B-010000.html
+++ b/F&B-드롭다운안지운것/F&B-010000.html
@@ -196,7 +196,24 @@
               <img src="images/main-text.png" alt="last chance!,최대 70% 할인,품절 되기 전에 구매하세요!">
             </a>
           </div>
+          <!-- mobile -->
         </div>
+        <img class="mobile" src="images/main-plus.jpg" alt="woman,man,kids moble 메뉴">
+        <!-- 아코디언 start -->
+        <div id="main-accordion">
+          <h1 class="skip">아코디언</h1>
+          <ul>
+            <li>
+              <a href="#tab1"><img src="images/main-plus.jpg" alt="메인 이미지 드롭다운메뉴"></a>
+              <div class="box active">
+                <li><a href="#">WOMAN</a></li>
+                <li><a href="#">MAN</a></li>
+                <li><a href="#">KIDS</a></li>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <!-- 아코디언 end -->
       </article>
       <!-- 상품 슬라이드 이미지 -->
       <!-- swiper 스크립트 -->
