--- a/F&B-드롭다운안지운것/F&B-010102.html
+++ b/F&B-드롭다운안지운것/F&B-010102.html
@@ -11,97 +11,105 @@
     <link rel="stylesheet" href="css/swiper.min.css">
     <!-- 공통 -->
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/F&B.css">
+    <link rel="stylesheet" href="css/F&B-4.css">
 
     <!-- script -->
     <script src="js/jquery.min.js"></script>
     <script src="js/swiper.min.js"></script>
-    <script src="js/F&B.js"></script>
+    <script src="js/F&B-2.js"></script>
   </head>
   <body>
     <a href="#contents" id="skip-nav">본문바로가기</a>
     <header>
       <div class="center">
         <h1><a href="#"><img src="images/logo.jpg" alt="F&B logo"></a></h1>
-
-        <!-- 로그인 / 팝업-->
+        <!-- 로그인 -->
         <div id="btn-login">
-          <button type="button" class="textchange">로그인/회원가입</button>
+          <button type="button" class="textchange">로그아웃</button>
           <button type="button" class="icon icon-heart"><span>즐겨찾기</span></button>
           <button type="button" class="icon icon-shopping-bag"><span title="장바구니 목록 수">(12)</span></button>
           <!-- 쇼핑백 팝업 -->
           <div class="popup-hover">
             <div class="shop-hover">
-              <button class="icon icon-cancel"><span class="skip">닫기</span></button>
+              <div class="popup-icon-shop">
+                <div>
+                  <img src="images/main-img1.jpg" alt="">
+                  <dl>
+                    <dd>새틴셔츠</dd>
+                    <dd>&#8361;29,000</dd>
+                    <dd>수량 : 1개</dd>
+                    <dd>컬러 : 화이트</dd>
+                    <dd>사이즈 : M</dd>
+                    <dd>합계 : &#8361;29,000</dd>
+                  </dl>
+                </div>
+                <div>
+                  <img src="images/main-img2.jpg" alt="">
+                  <dl>
+                    <dd>드레스</dd>
+                    <dd>&#8361;49,000</dd>
+                    <dd>수량 : 1개</dd>
+                    <dd>컬러 : 블루</dd>
+                    <dd>사이즈 : M</dd>
+                    <dd>합계 : &#8361;49,000</dd>
+                  </dl>
+                </div>
+                <div class="sale">
+                  <span>주문가격:</span>
+                  <span>할인:</span>
+                  <span>배송비:</span>
+                  <span>합계:</span>
+                </div>
+                <div class="btn-group">
+                  <button type="button">결제</button>
+                  <button type="button">쇼핑백</button>
+                </dl>
+              </div>
             </div>
           </div>
-        </div>
-        <!-- 쇼핑리스트 팝업 -->
-        <div class="popup-icon-shop">
-          <div>
-            <img src="images/main-img1.jpg" alt="">
-            <dl>
-              <dd>새틴셔츠</dd>
-              <dd>&#8361;29,000</dd>
-              <dd>수량 : 1개</dd>
-              <dd>컬러 : 화이트</dd>
-              <dd>사이즈 : M</dd>
-              <dd>합계 : &#8361;29,000</dd>
-            </dl>
-          </div>
-          <div>
-            <img src="images/main-img2.jpg" alt="">
-            <dl>
-              <dd>드레스</dd>
-              <dd>&#8361;49,000</dd>
-              <dd>수량 : 1개</dd>
-              <dd>컬러 : 블루</dd>
-              <dd>사이즈 : M</dd>
-              <dd>합계 : &#8361;49,000</dd>
-            </dl>
-          </div>
-          <div class="sale">
-            <span>주문가격:</span>
-            <span>할인:</span>
-            <span>배송비:</span>
-            <span>합계:</span>
-          </div>
-          <div class="btn-group">
-            <button type="button">결제</button>
-            <button type="button">쇼핑백</button>
-          </dl>
+          <!-- 쇼핑백이 비어있을 때 팝업 -->
+
+          <!-- 로그인/회원가입 팝업 -->
+          <form class="popup-login-form-wrap" action="F&B-010000-1.html" method="post">
+          <!-- <form action="데이터를 전달할 곳" method="get 또는 post"> -->
+            <div class="login-popup-hover">
+              <div class="login-hover">
+                <div class="popup-login">
+                  <!-- 로그인 -->
+                  <h1>로그인</h1>
+                  <!-- 로그인폼 -->
+                  <div class="login-form">
+                    <div>
+                      <label for="id">*아이디</label>
+                      <input type="text" id="id" title="아이디" class="login">
+                    </div>
+                    <div>
+                    <div>
+                      <label for="password">*비밀번호</label>
+                      <input type="text" id="password" title="비밀번호" class="password">
+                    </div>
+                    </div>
+                    <div class="login-option">
+                      <!-- 체크박스 -->
+                      <label><input type="checkbox" title="체크박스">로그인 상태 유지</label>
+                    </div>
+                    <p>비밀번호를 잊으셨나요?</p>
+                  </div>
+                  <!-- 버튼 -->
+                  <div class="login-button">
+                    <button class="black" type="submit">로그인</button>
+                    <!-- <p></p> -->
+                    <button type="submit">회원가입</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </form>
+          <!-- 팝업 백그라운드 -->
+          <div class="popup-bg"></div>
+          <!-- 팝업 end -->
         </div>
       </div>
-      <!-- 쇼핑리스트 end -->
-      <!-- 로그인 팝업 & 로그아웃 연결-->
-      <form class="popup-login-form-wrap" action="F&B-010102.html" method="post">
-        <!-- 로그인 -->
-        <h1>로그인</h1>
-        <!-- 로그인폼 -->
-        <div class="login-form">
-          <div>
-            <label for="id">*아이디</label>
-            <input type="text" id="id" title="아이디" class="login">
-          </div>
-          <div>
-            <label for="password">*비밀번호</label>
-            <input type="text" id="password" title="비밀번호" class="password">
-          </div>
-        </div>
-        <div class="login-option">
-          <!-- 체크박스 -->
-          <label><input type="checkbox" title="체크박스">로그인 상태 유지</label>
-          <p>비밀번호를 잊으셨나요?</p>
-        </div>
-        <!-- 버튼 -->
-        <div class="login-button">
-          <button class="black" type="submit">로그인</button>
-          <!-- <p></p> -->
-          <button type="submit">회원가입</button>
-        </div>
-      </form>
-      <!-- 로그인 폼end -->
-
       <!-- 로그아웃과 네비 -->
       <nav>
         <div class="logout-form" style="display:none;">
@@ -123,7 +131,8 @@
         </form>
 
         <!-- 네비게이션 -->
-        <button id="btn-menu"><i class="icon icon-menu-1" id="togglemenu"></i></button>
+        <!-- <img class="togglemenu" src="images/togglemenu.png" alt="토글메뉴이미지"> -->
+        <i class="icon icon-menu" id="togglemenu"></i>
         <ul class="gnb-nav">
           <li>
             <a href="#"><span class="ko">WOMAN</span></a>
@@ -174,9 +183,8 @@
         </ul>
       </nav>
       <!-- 네비게이션 end -->
-      </div>
     </header>
-  <!-- header end -->
+    <!-- header end -->
 
 
     <!-- section -->
@@ -196,7 +204,9 @@
               <img src="images/main-text.png" alt="last chance!,최대 70% 할인,품절 되기 전에 구매하세요!">
             </a>
           </div>
+          <!-- mobile -->
         </div>
+        <img class="mobile" src="images/main-plus.jpg" alt="woman,man,kids moble 메뉴">
       </article>
       <!-- 상품 슬라이드 이미지 -->
       <!-- swiper 스크립트 -->
@@ -349,12 +359,12 @@
       <article class="event">
         <div class="event-wrap">
           <div class="app-event">
-            <img src="images/event-img-m.jpg" alt="이벤트 이미지">
+            <!-- <img src="" alt="앱 광고 이미지"> -->
+            <!-- <img src="images/event-text1.jpg" alt="get the F&B app 텍스트 이미지"> -->
             <button type="button">더 보기</button>
           </div>
           <div class="off-event">
-            <!-- <a href="#"></a> -->
-            <img src="images/event-img2-m.jpg" alt="할인 이벤트 SIGN UP & GET 25% OFF ">
+            <a href="#"></a>
             <!-- <p>WELCOM TO<br>
               FASHION NEWS</p> -->
             <!-- <a href="#"><img src="images/event-text2.png" alt="SIGN UP & GET 25% OFF 텍스트 이미지"></a> -->
@@ -403,35 +413,29 @@
     <!-- footer -->
     <footer>
       <div class="center">
-        <!-- 사이트맵 & 푸터 아코디언-->
-        <div class="sub-nav" id="accordion">
+        <!-- 사이트맵 -->
+        <div class="sub-nav">
           <ul class="category">
-            <li class="abo tab1"><a href="#">카테고리</a></li>
-            <div>
-              <li class="box active"><a href="#">WOMAN</a></li>
-              <li class="box active"><a href="#">MAN</a></li>
-              <li class="box active"><a href="#">KIDS</a></li>
-              <li class="box active"><a href="#">SALE</a></li>
-            </div>
+            <li><a href="#">카테고리</a></li>
+            <li><a href="#">WOMAN</a></li>
+            <li><a href="#">MAN</a></li>
+            <li><a href="#">KIDS</a></li>
+            <li><a href="#">SALE</a></li>
           </ul>
           <ul class="customer">
-            <li class="tab1"><a href="#">고객지원</a></li>
-            <div>
-              <li class="box"><a href="#">고객센터</a></li>
-              <li class="box"><a href="#">개인정보 보호정책</a></li>
-              <li class="box"><a href="#">매장찾기</a></li>
-              <li class="box"><a href="#">MY PAGE</a></li>
-            </div>
+            <li><a href="#">고객지원</a></li>
+            <li><a href="#">고객센터</a></li>
+            <li><a href="#">개인정보 보호정책</a></li>
+            <li><a href="#">매장찾기</a></li>
+            <li><a href="#">MY PAGE</a></li>
           </ul>
           <ul class="newsletter">
             <li>
               <a href="#">뉴스레터</a>
-              <span>뉴스레터를 구독하시고, 한 아이템에 대해 25%의 할인을 받아보세요.</span>
               <button type="button">가입</button>
             </li>
           </ul>
         </div>
-
         <!-- sns -->
         <ul class="sns">
           <li><button type="button" class="icon icon-facebook-squared"><span class="skip">페이스북</span></button></li>
@@ -450,25 +454,7 @@
       </div>
     </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script>
-<<<<<<< HEAD
-
-=======
-    // 메인 아코디언
-    $('#main-accordion .tab1').click(function(e){
-      e.preventDefault();
-      $(this).next().slideToggle();//다음요소들은 반복적으로 보여준다.
-    })
-    // footer 아코디언
-    $('#accordion .tab1').click(function(e){
-      e.preventDefault();
-      $(this).next().slideToggle();//다음요소들은 반복적으로 보여준다.
-    })
->>>>>>> 0ff661e71cc34d845ecd747acf3df87a68409c7a
-
-    </script>
-
+    <!-- popup -->
 
 
   </body>
