링크 화면 변경

--- a/portfoliocite/index.html
+++ b/portfoliocite/index.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <!-- 비디오=>이미지 수정 -->
-        <video autoplay="" loop="" class="" data-wow-delay="0.5s" poster="./assets/send-filter.jpg" id="video-background">
+        <video autoplay="" loop="" class="" data-wow-delay="0.5s" poster="./assets/mainimg.jpg" id="video-background">
         </video>
     </header>
     <!-- PROFILE -->
@@ -138,13 +138,13 @@
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://jar3543.github.io/github/sidmool/index.html" class="gallery-box" data-toggle="modal" data-src="./assets/deer.jpg">
-                        <img src="./assets/deer.jpg" class="img-responsive" alt="Image 1">
+                        <img src="./assets/sidmool-monitor-img.jpg" class="img-responsive" alt="Image 1">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
                                     <i class="glyphicon glyphicon-link"></i>
                                     <p>시드물 홈페이지 리뉴얼</p>
-                                    <p>RESPONSIVE WEB</p>
+                                    <p>PC</p>
                                 </div>
                             </div>
                         </div>
@@ -152,13 +152,14 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://jar3543.github.io/github/F&B/F&B-000000.html" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
-                        <img src="./assets/beach.jpg" class="img-responsive" alt="Image 2">
+                        <img src="./assets/F&B-pc-img.jpg" class="img-responsive" alt="Image 2">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
                                     <i class="glyphicon glyphicon-link"></i>
                                     <p>F&B 자체 제작 홈페이지</p>
-                                    <p>PC | 기획:이이슬. 퍼블리싱:전아름</p>
+                                    <p>RESPONSIVE WEB</p>
+                                    <p>기획:이이슬. 퍼블리싱:전아름</p>
                                 </div>
                             </div>
                         </div>
@@ -167,7 +168,7 @@
 				<div class="clearfix hidden-lg"> </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://jar3543.github.io/github/portfoliocite/index.html" class="gallery-box" data-toggle="modal" data-src="./assets/lake.jpg">
-                        <img src="./assets/lake.jpg" class="img-responsive" alt="Image 3">
+                        <img src="./assets/portfoliocite-pc-img.jpg" class="img-responsive" alt="Image 3">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
