포폴 수정&업뎃

--- a/portfoliocite/index.html
+++ b/portfoliocite/index.html
@@ -42,15 +42,15 @@
         </div>
     </nav>
     <header id="first">
-        <div class="header-content">
-            <div class="inner">
-                <h1 class="">I AM AREUM JOEN</h1>
-                <h4>POSITIVE | CREATING | DREAMING WEB PUBLISHER</h4>
-            </div>
-        </div>
-        <!-- 비디오=>이미지 수정 -->
-        <video autoplay="" loop="" class="" data-wow-delay="0.5s" poster="./assets/mainimg.jpg" id="video-background">
-        </video>
+      <div class="header-content">
+          <div class="inner">
+              <h1 class="">I AM AREUM JOEN</h1>
+              <h4>POSITIVE | CREATING | DREAMING WEB PUBLISHER</h4>
+          </div>
+      </div>
+      <div class="header-content-bg">
+
+      </div>
     </header>
     <!-- PROFILE -->
     <section class="bg-primary" id="one">
@@ -194,55 +194,9 @@
                     <hr class="primary">
                     <p>I love WEB PUBLISING. Fill out the form below and i will business with you</p>
                 </div>
-                <!-- <div class="col-lg-10 col-lg-offset-1 text-center contact-rgba">
-                    <form class="contact-form row ">
-                        <div class="col-md-4">
-                            <label></label>
-                            <input type="text" class="form-control" placeholder="Name">
-                        </div>
-                        <div class="col-md-4">
-                            <label></label>
-                            <input type="text" class="form-control" placeholder="Email">
-                        </div>
-                        <div class="col-md-4">
-                            <label></label>
-                            <input type="text" class="form-control" placeholder="Phone">
-                        </div>
-                        <div class="col-md-12">
-                            <label></label>
-                            <textarea class="form-control" rows="9" placeholder="Your message here.."></textarea>
-                        </div>
-                        <div class="col-md-4 col-md-offset-4">
-                            <label></label>
-                            <button type="button" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-block btn-lg">Send <i class="ion-android-arrow-forward"></i></button>
-                        </div>
-                    </form>
-                </div> -->
               <div>
                 <div class="col-lg-6 wow fadeInUp delay-06s">
                   <div class="form">
-                    <!-- <div id="sendmessage">Your message has been sent. Thank you!</div>
-                    <div id="errormessage"></div>
-                    <form action="" method="post" role="form" class="contactForm">
-                        <div class="form-group">
-                            <input type="text" name="name" class="form-control input-text" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                            <div class="validation"></div>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" class="form-control input-text" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                            <div class="validation"></div>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control input-text" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                            <div class="validation"></div>
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                            <div class="validation"></div>
-                        </div>
-
-                      <button type="submit" class="btn input-btn">SEND MESSAGE</button>
-                    </form> -->
                     <script src="https://www.powr.io/powr.js?external-type=html"></script>
                     <div class="powr-contact-form" id="b2dd7473_1520932012"></div>
                   </div>
