--- a/F&B/F&B-010000.html
+++ b/F&B/F&B-010000.html
@@ -113,10 +113,6 @@
         <!-- 통합검색 -->
         <form action="#" class="search-form">
           <button id="btn-search" class="icon icon-search" type="button">
-            <!-- <img class="pc" src="images/icon-search.jpg" alt="검색아이콘이미지">
-            <img class="mobile" src="images/m-icon-search.jpg" alt="검색아이콘이미지"> -->
-            <!-- <i class="icon icon-search"></i> -->
-            <!-- <button class="icon icon-search"></button> -->
             <span class="skip">통합검색</span>
           </button>
           <input type="text" id="total-search" title="통합검색">
@@ -196,7 +192,28 @@
               <img src="images/main-text.png" alt="last chance!,최대 70% 할인,품절 되기 전에 구매하세요!">
             </a>
           </div>
+          <!-- mobile -->
         </div>
+        <img class="mobile" src="images/main-plus.jpg" alt="woman,man,kids moble 메뉴">
+        <!-- 아코디언 start -->
+        <div id="main-accordion">
+          <h1 class="skip">아코디언</h1>
+          <ul>
+            <li>
+              <a href="#tab1">
+                <img src="images/main-plus.jpg" alt="메인 이미지 드롭다운메뉴">
+              </a>
+              <div class="box active">
+                  <a href="#">WOMAN</a><br>
+                  <a href="#">MAN</a><br>
+                  <a href="#">KIDS</a><br>
+                <!-- <li><a href="#">MAN</a></li>
+                <li><a href="#">KIDS</a></li> -->
+              </div>
+            </li>
+          </ul>
+        </div>
+        <!-- 아코디언 end -->
       </article>
       <!-- 상품 슬라이드 이미지 -->
       <!-- swiper 스크립트 -->
@@ -353,13 +370,7 @@
             <button type="button">더 보기</button>
           </div>
           <div class="off-event">
-            <!-- <a href="#"></a> -->
             <img src="images/event-img2-m.jpg" alt="할인 이벤트 SIGN UP & GET 25% OFF ">
-            <!-- <p>WELCOM TO<br>
-              FASHION NEWS</p> -->
-            <!-- <a href="#"><img src="images/event-text2.png" alt="SIGN UP & GET 25% OFF 텍스트 이미지"></a> -->
-            <!-- <p class="letter">신상품 및 멋진 특가 정보를<br>
-              편지함으로 직접 전달해 드립니다.</p> -->
             <li><a href="#">지금 가입하기</a></li>
           </div>
         </div>
@@ -449,27 +460,8 @@
         <img src="images/footer-logo.jpg" alt="footer F&B logo">
       </div>
     </footer>
-
+    <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script>
-<<<<<<< HEAD
-
-=======
-    // 메인 아코디언
-    $('#main-accordion .tab1').click(function(e){
-      e.preventDefault();
-      $(this).next().slideToggle();//다음요소들은 반복적으로 보여준다.
-    })
-    // footer 아코디언
-    $('#accordion .tab1').click(function(e){
-      e.preventDefault();
-      $(this).next().slideToggle();//다음요소들은 반복적으로 보여준다.
-    })
->>>>>>> 0ff661e71cc34d845ecd747acf3df87a68409c7a
-
-    </script>
-
-
 
   </body>
 </html>
