--- a/sidmool/index.html
+++ b/sidmool/index.html
@@ -30,14 +30,15 @@
     <!-- header -->
     <header>
       <h1><img src="images/top_logo.png" alt="logo 이미지"></h1>
-      <!-- 검색 -->
+      <!-- 통합검색 -->
       <div class="search">
         <input type="checkbox" id="btn-search-open">
-        <label for="btn-search-open" class="btn-search-open">
+        <label for="btn-search-open" class="btn-search-open" title="통합검색">
           <form action="#" class="form-wrap">
-            <input class="search-input" type="text" placeholder="찾으시는 제품을 입력하세요.">
+            <input for="btn-label" class="search-input" type="text" placeholder="찾으시는 제품을 입력하세요." title="통합검색">
             <i class="icon icon-search" aria-hidden="true"></i>
-            <button type="submit">검색</button>
+            <button type="submit" id="btn-label">검색</button>
+            <label for="btn-label" class="skip">버튼과 라벨 연결</label>
           </form>
         </label>
       </div>
@@ -210,28 +211,28 @@
               </li>
               <li>
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span>RIVIEW</span><span class="ko">리뷰</span></a>
-                <ul class="dropdown-menu"role="menu">
+                <ul class="dropdown-menu" role="menu">
                   <li><a href="#">포토후기</a></li>
                   <li><a href="#">사용후기</a></li>
                 </ul>
               </li>
               <li>
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span>RECOMMEND</span><span class="ko">커뮤니티</span></a>
-              <ul class="dropdown-menu"role="menu">
+              <ul class="dropdown-menu" role="menu">
                 <li><a href="#">전 어떻게 써요?</a></li>
                 <li><a href="#">성분사전</a></li>
               </ul>
               </li>
               <li>
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span>COMMUNITY</span><span class="ko">커뮤니티</span></a>
-              <ul class="dropdown-menu"role="menu">
+              <ul class="dropdown-menu" role="menu">
                 <li><a href="#">시드물 통신</a></li>
                 <li><a href="#">시사모 자유게시판</a></li>
               </ul>
               </li>
               <li>
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span>CS CENTER</span><span class="ko">공지사항</span></a>
-                <ul class="dropdown-menu"role="menu">
+                <ul class="dropdown-menu" role="menu">
                   <li><a href="#">공지사항</a></li>
                   <li><a href="#">1:1문의게시판</a></li>
                   <li><a href="#">미확인 입금자</a></li>
@@ -243,20 +244,15 @@
       </nav>
 
       <!-- quick bar 토글 메뉴 -->
-      <!-- <input type="checkbox" id="btn-menu"> -->
       <div class="quickbar">
         <button id="btn-menu" class="btn-menu icon icon-menu">
           <span class="skip">토글메뉴</span>
-          <!-- <span></span>
-          <span></span>
-          <span></span> -->
         </button>
         <!-- quick bar menu -->
         <ul class="btn-nav">
           <li>
             <a href="#tab1">
               <span>Quick Menu</span>
-              <!-- <span class="ko">빠른 메뉴</span> -->
             </a>
             <ul class="box active menulist">
               <li><a href="#">로그인</a></li>
@@ -270,7 +266,6 @@
           <li>
             <a href="#tab1">
               <span>CS Center</span>
-              <!-- <span class="ko">고객서비스센터</span> -->
             </a>
             <ul class="box active q-center">
               <li><a href="#">자주묻는 질문</a></li>
@@ -507,13 +502,13 @@
     <!-- 게시판 -->
     <div class="board">
       <div class="board-wrap">
-        <a href="#"><img src="images/love.jpg" alt="사랑 게시판 메인 이미지1"></a>
-        <a href="#"><img src="images/love2.jpg" alt="사랑 게시판 메인 이미지2"></a>
+        <a href="#"><img src="images/love.jpg" alt="시드물 게시판(알림)"></a>
+        <a href="#"><img src="images/love2.jpg" alt="시드물 게시판(알림)"></a>
         <div>
           <p>Board</p>
           <ul>
-            <li><a href="#">일/가정/양립 대전 실천 선포식에 초청된 시드물</a></li><br>
-            <li><a href="#">YTN'청년 창업 런웨이'</a></li><br>
+            <li><a href="#">일/가정/양립 대전 실천 선포식에 초청된 시드물</a></li>
+            <li><a href="#">YTN'청년 창업 런웨이'</a></li>
             <li><a href="#">따뜻한 12월~ 시드물이 전하는 '착한 선물'!</a></li>
           </ul>
           <button>더보기</button>
@@ -525,21 +520,21 @@
     <section class="tab-section">
       <div id="line">
         <section>
-          <h2 class="t1"><a href="#"><img src="images/tit_newbook_over.jpg" alt="클릭 된 상태 이미지"></a></h2>
+          <h2 class="t1"><a href="#"><img src="images/tit_newbook_over.jpg" alt="시드물 추천라인 제품이미지"></a></h2>
           <div class="items item1">
             <a href="#" class="rss">
               <article id="line1" class="line-content">
                 <header class="img-wrap">
-                <h1><img src="images/c-mainline1.jpg" alt="보습라인 이미지"></h1>
-                <h1><img src="images/c-mainline2.jpg" alt="보습라인 이미지"></h1>
-                <h1><img src="images/c-mainline3.jpg" alt="보습라인 이미지"></h1>
-                <h1><img src="images/c-mainline4.jpg" alt="보습라인 이미지"></h1>
+                <h1><img src="images/c-mainline1.jpg" alt="보습라인 이미지1"></h1>
+                <h1><img src="images/c-mainline2.jpg" alt="보습라인 이미지2"></h1>
+                <h1><img src="images/c-mainline3.jpg" alt="보습라인 이미지3"></h1>
+                <h1><img src="images/c-mainline4.jpg" alt="보습라인 이미지4"></h1>
                 </header>
               </article>
             </a>
           </div>
         </section>
-        <h2 class="t2"><a href="#"><img src="images/tit_news.jpg" alt="클릭 안된 상태 추천시리즈 이미지"></a></h2>
+        <h2 class="t2"><a href="#"><img src="images/tit_news.jpg" alt="시드물 추천시리즈 제품이미지"></a></h2>
         <div class="items item2">
           <div id="series">
             <a href="#"><img src="images/series1.jpg" alt="추천 시리즈 이미지 무기자차"></a>
@@ -589,8 +584,6 @@
       </div>
     </article>
 
-
-
     <!-- 배너 -->
     <div class="banner">
       <div class="banner-wrap">
@@ -633,83 +626,20 @@
     </footer>
     <!-- footer end -->
 
-    <!-- jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-
-
-    <!-- 스와이퍼 -->
     <script>
-    // 중첩된 드롭다운 제어
-    $('.test').on('click',function(e){
-      $(this).next('ul').slideToggle();
-      // 이벤트가 버블링으로 발생될 때 현재 이벤트 이후의 전파를 차단
-      e.stopPropagation();
-      // e링크 이벤트 제거
-      e.preventDefault();
+    //네비게이션 포커스인/포커스아웃
+    $('nav .bgwrap .wrap .nav li a').on('focusin',function(){
+      $(this).next().show();
+    $('nav .bgwrap .wrap .nav li a').on('focusout',function(){
+      $(this).next().hide();
     })
+  })
 
     // quick bar
     $('.icon.icon-menu').on('click',function(){
-      // console.log('click');
-      // 네비게이션 보이게 하기
       $('header').toggleClass('on');
-      // console.log('on');
       $(this).toggleClass('icon-menu icon-cancel');
-      // console.log('닫기');
     })
-
-    // 대표메큐를 클릭 했을 때 일정 높이만큼(500)만 보이기
-    // $('.btn-menu > li').on('click',function(){
-    //   $('header').toggleClass('on');
-    //   console.log('클릭');
-    //  $('.btn-nav > li > ul').addClass('on');
-    //    console.log('토글');
-    // })
-
-    // $('.btn-nav > li').on('click',function(){
-    //   // console.log('클릭');
-    //   $('.btn-nav > li > ul').addClass('on');
-    //   // console.log('보이기');
-    //
-    //     if ($(this).next().is(':visible')) {
-    //       $(this).next().removeClass('on');
-    //       // console.log('다음ul접기');
-    //     }
-    //
-    //   $('.gnb-nav ul').slideUp(500);
-    //   $(this).find('ul').removeClass('on');
-    //   // console.log('닫기');
-    // })
-
-    // $('.btn-nav > li').on('click',function(){
-    //   // console.log('클릭');
-    //   $('.btn-nav > li > ul > li').addClass('on');
-    //   console.log('li접기');
-    //
-    //     if ($(this).siblings().is(':visible')) {
-    //       $(this).siblings().removeClass('on');
-    //       // console.log('다음ul접기');
-    //     }
-    //
-    //   $('.gnb-nav ul').slideUp(500);
-    //   $(this).find('ul').removeClass('on');
-    //   // console.log('닫기');
-    // })
-
-    // $('.btn-nav > li').on('click',function(){
-    //   console.log('클릭');
-    //   var content=$(this).siblings('.btn-nav > li > ul');
-    //     if (content.css('display') == 'none') {
-    //       $('.btn-nav > li > ul').slideDown();
-    //       console.log('열기');
-    //       content.slideDown();
-    //       // console.log('다른메뉴 닫기');
-    //     }else {
-    //       // $('.btn-nav > li > ul').slideDown();
-    //       // content.slideUp();
-    //       // console.log('닫기');
-    //     }
-    // })
 
     $('.btn-nav li a').click(function(e){
       e.preventDefault();
@@ -718,16 +648,13 @@
 
     //메인 스와이퍼 이미지 & 갤러리 마우스오버/마우스아웃 시
     var swiper = new Swiper('.main');
-
     var swiper = new Swiper('.swiper-container');
 
       $('.swiper-slide').on('mouseover',function(){
         $('.swiper-bg').stop().show();
-        // console.log('마우스오버');
       })
       $('.swiper-slide').on('mouseout',function(){
         $('.swiper-bg').stop().hide();
-        // console.log('마우스아웃');
       })
 
     //탭메뉴
@@ -757,8 +684,13 @@
         $('#roll').attr('src','images/daily_'+roll+'.jpg');
       },2000);
     })
-
-
+    //데일리 포커스인/포커스아웃
+    $('.daily').on('focusin',function(){
+      $('.daily #roll').show();
+    $('.daily img').on('focusout',function(){
+      $('.daily #roll').hide();
+    })
+  })
 
     </script>
 
