--- a/portfoliocite/index.html
+++ b/portfoliocite/index.html
@@ -152,7 +152,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://jar3543.github.io/github/F&B/F&B-000000.html" class="gallery-box" data-toggle="modal" data-src="./assets/beach.jpg">
-                        <img src="./assets/F&B-pc-img.jpg" class="img-responsive" alt="F&B 자체제작 pc 화면 이미지">
+                        <img src="./assets/F&B-pc-img.jpg" class="img-responsive" alt="Image 2">
                         <div class="gallery-box-caption">
                             <div class="gallery-box-content">
                                 <div>
