--- a/sidmool/index.html
+++ b/sidmool/index.html
@@ -303,7 +303,7 @@
     <div class="swiper-container main">
       <div class="swiper-wrapper main-swiper-wrapper">
         <div class="swiper-slide main-swiper">
-          <img src="images/main4.jpg" alt="스와이퍼이미지">
+          <a href="#"><img src="images/main4.jpg" alt="스와이퍼이미지"></a>
           <div class="swiper-text">
             <p>PERFECT SIDMOOL</p>
             <p><strong>시드물</strong>과 함께 하세요!</p>
