시드물 상세페이지 보완

--- a/sidmool/index.html
+++ b/sidmool/index.html
@@ -303,7 +303,7 @@
     <div class="swiper-container main">
       <div class="swiper-wrapper main-swiper-wrapper">
         <div class="swiper-slide main-swiper">
-          <a href="#"><img src="images/main4.jpg" alt="스와이퍼이미지"></a>
+          <a href="https://jar3543.github.io/github/sidmool/sub.html"><img src="images/main10.jpg" alt="사카로 광채 앰플"></a>
           <div class="swiper-text">
             <p>PERFECT SIDMOOL</p>
             <p><strong>시드물</strong>과 함께 하세요!</p>
@@ -311,27 +311,27 @@
           <button>scroll<i class="icon icon-right-open"></i></button>
         </div>
         <div class="swiper-slide main-swiper">
-          <a href="#"><img src="images/main5.jpg" alt="스와이퍼이미지"></a>
+          <a href="#"><img src="images/main5.jpg" alt="마다가스카르 리얼수분 크림"></a>
           <button>scroll<i class="icon icon-right-open"></i></button>
         </div>
         <div class="swiper-slide main-swiper">
-          <a href="#"><img src="images/main6.jpg" alt="스와이퍼이미지"></a>
+          <a href="#"><img src="images/main6.jpg" alt="휴먼올리고 리페어크림"></a>
           <button>scroll<i class="icon icon-right-open"></i></button>
         </div>
         <div class="swiper-slide main-swiper">
-          <a href="#"><img src="images/main7.jpg" alt="스와이퍼이미지"></a>
+          <a href="#"><img src="images/main7.jpg" alt="무기자차 썬크림"></a>
           <button>scroll<i class="icon icon-right-open"></i></button>
         </div>
         <div class="swiper-slide main-swiper">
-          <a href="#"><img src="images/main8.jpg" alt="스와이퍼이미지"></a>
+          <a href="#"><img src="images/main8.jpg" alt="카카두 아미노 클렌저"></a>
           <button>scroll<i class="icon icon-right-open"></i></button>
         </div>
         <div class="swiper-slide main-swiper">
-          <a href="#"><img src="images/main9.jpg" alt="스와이퍼이미지"></a>
+          <a href="#"><img src="images/main9.jpg" alt="시드물 흉터케어젤"></a>
           <button>scroll<i class="icon icon-right-open"></i></button>
         </div>
         <div class="swiper-slide main-swiper">
-          <a href="#"><img src="images/main10.jpg" alt="스와이퍼이미지"></a>
+          <a href="#"><img src="images/main4.jpg" alt="민중기 앰플"></a>
           <button>scroll<i class="icon icon-right-open"></i></button>
         </div>
         <div class="swiper-slide main-swiper">
