--- a/sidmool/sub.html
+++ b/sidmool/sub.html
@@ -302,7 +302,8 @@
         <!-- 상세 페이지 네비게이션 button-->
         <div class="btn-group">
           <button id="box1">제품상세정보</button>
-          <button id="box2" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">배송정보</button>
+          <button id="box2" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" id="btn-modal1">배송정보</button>
+          <button type="button" class="btn btn-primary btn-lg" id="btn-modal">필독공지</button>
           <button id="box3">제품리뷰</button>
           <button id="box4">제품문의</button>
         </div>
@@ -330,8 +331,8 @@
                   <p>37% 할인 이벤트 중 명품 발효 성분 광채/리뉴얼/보습</p>
                 </div>
                 <div class="clfix">
-                  <p><a href="#">효모광채</a></p>
-                  <p><a href="#">광채</a></p>
+                  <p><a href="#">*효모광채</a></p>
+                  <p><a href="#">*광채</a></p>
                   <p><a href="#">적립금정책</a></p>
                   <p><a href="#">등급별혜택</a></p>
                 </div>
@@ -367,9 +368,12 @@
 
                 </div>
                 <div class="button-wrap">
-                  <a href="#"><span>바로구매</span></a>
+                  <!-- <a href="#"><span>바로구매</span></a>
                   <a href="#"><span>장바구니</span></a>
-                  <a href="#"><span>위시리스트</span></a>
+                  <a href="#"><span>위시리스트</span></a> -->
+                  <a href="#">바로구매</a>
+                  <a href="#">장바구니</a>
+                  <a href="#">위시리스트</a>
                 </div>
                 <div class="sub-sns">
                   <a href="#"><span class="icon icon-facebook-rect"></span></a>
@@ -455,26 +459,263 @@
                 <div class="modal-body">
                   <img src="images/sub-box2-img.jpg" alt="배송정보 이미지">
                 </div>
-                <!-- <div class="modal-footer">
-                  <button type="button" class="btn btn-primary" data-dismiss="modal">닫기</button>
-                </div> -->
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- 필독공지 -->
+        <div class="modal fade" id="myModal2">
+          <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">필독공지</h4>
+              </div>
+              <div class="modal-body">
+                <p>화장품 샘플 관련 법에 의해서
+                  정해진 샘플 품목 이외에는 배송이 되지 않습니다.
+                  보다 다양한 샘플을 준비하기 위해서 더욱 노력하겠습니다.
+                  감사합니다.</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" id="btn-modal-close">close</button>
               </div>
             </div>
           </div>
         </div>
         <!-- 제품리뷰 -->
-        <div class="box3">제품리뷰</div>
+        <div class="box3"><span class="skip">제품리뷰</span>
+          <div class="dotted-box">
+            <div>
+              <ul>
+                <li><strong>REVIEW</strong>시드물 제품 리뷰에 대해 알려드립니다!</li>
+                <li>샘플 후기 또는 구매 내역이 없는 후기는 공정성을 위해서 자동으로 1:1 게시판으로 이동 됩니다.</li>
+                <li>자신의 피부타입, 사용기간, 사용하시는 제품등에 대한 자세한 내용을 함께 입력해주시면 다른 고객님들에게 더욱 큰 도움이 됩니다.</li>
+              </ul>
+            </div>
+          </div>
+          <!-- 게시판 테이블 -->
+          <div class="bs-example rb" data-example-id="simple-table">
+            <table class="table table-hover">
+              <caption></caption>
+              <thead>
+                <tr>
+                  <th>번호</th>
+                  <th>사용후기</th>
+                  <th>글쓴이</th>
+                  <th>날짜</th>
+                  <th>조회수</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td data-toggle="tooltip" data-container="body" data-placement="bottom" data-trigger="click" title="사용한지 7일 됩니다
+                    광채효과는 바로봤어요 이마
+                    그리고 턱 볼 여기 저기서 자연스러운 광이 납니다 심지어 지하철 유리에비친 내 얼굴에서도 광이 보여요
+                    그러다 주름효과는 자고 일어날 때마다 얼굴이 뺑뺑해지는 느낌은 있었어요
+                    그런데 일주일 뒤에는 확실히 얼굴이 좋아졌어요">
+                  후기를 꼭 쓰게만드네요.</td>
+                  <td>so*****</td>
+                  <td>2015/04/30</td>
+                  <td>10,884</td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td data-toggle="tooltip" data-container="body" data-placement="right" data-trigger="click" title="광채앰플 바르고 일어난 다음날 아침진짜 새삼스레 감탄했어요
+                    피부가 그냥 부들부들 보들보들반짝거리기까지
+                    한 두달 쉬고 오랫만에 발라서 그 효과가 더 드라마틱하게 나는건지
+                    지금도 세수하고 하나만 발랐는데 피부가 보들보들해요
+                    친구랑 영상통화하는데 피부가 반짝거린대요">2010년부터 시드물 써왔는데, 이 제품이 가장 좋아요.</td>
+                  <td>ma*****</td>
+                  <td>2016/10/17</td>
+                  <td>12,329</td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td data-toggle="tooltip" data-container="body" data-placement="bottom" data-trigger="click" title="진짜 꼭 사세요
+                    적당한 보습이 필요한 지성분들 진짜 최고에요
+                    이거 건성 복합성 분들 그냥 다 최고에요. 얼른 쓰시고 이뻐지세요.
+                    그냥 1가정 1사카로앰플 시급.">1가정1광채앰플 시급.</td>
+                  <td>in*****</td>
+                  <td>2017/10/20r</td>
+                  <td>17,488</td>
+                </tr>
+                <tr>
+                  <th scope="row">4</th>
+                  <td data-toggle="tooltip" data-container="body" data-placement="top" data-trigger="click" title="피부가 좋아지는게 느껴지니깐
+                    자꾸 기능별로 사게 되는거 같아요">20대피부되찾아줘요.</td>
+                  <td>na*****</td>
+                  <td>2017/12/07</td>
+                  <td>12,853</td>
+                </tr>
+                <tr>
+                  <th scope="row">5</th>
+                  <td data-toggle="tooltip" data-container="body" data-placement="right" data-trigger="click" title="너무너무 좋아용
+                    진짜 이거 쓰고 주변에서 뭐했냐고
+                    광채난다는 말 진짜 많이 들었어요
+                    효과 짱이에요 앞으로도 계속계속 쓸거같아요">몇년째쓰고있어요.</td>
+                  <td>sh*****</td>
+                  <td>2018/03/27</td>
+                  <td>25</td>
+                </tr>
+                <tr>
+                  <th scope="row">6</th>
+                  <td data-toggle="tooltip" data-container="body" data-placement="bottom" data-trigger="click" title="예민한 피부인데도 트러* 안나고 잘 사용하고 있습니다.
+                    아침 저녁으로 수분크림전에 바르는데 하루종일 촉촉하게 유지되고
+                    겨울에도 건조하지 않아요.
+                    모델링 팩할때는 팩 전에 얼굴에 도포해주면 더욱 잘 먹는 것 같아요.
+                    앰플로는 꽤 용량이 커서 3개월째 쓰고 있는데도 절반 가량 남았어요.">은은한 광채, 촉촉함, 가성비.</td>
+                  <td>cu*****</td>
+                  <td>2018/03/27</td>
+                  <td>27</td>
+                </tr>
+                <tr>
+                  <th scope="row">7</th>
+                  <td data-toggle="tooltip" data-container="body" data-placement="top" data-trigger="click" title="다들 피부좋아졌단말을 먼저하니
+                    저도 시드물자랑을 늘비하게 다들 영업뛰냐고합니다">시드물전도사.</td>
+                  <td>ou*****</td>
+                  <td>2018/03/27</td>
+                  <td>28</td>
+                </tr>
+                <tr>
+                  <th scope="row">8</th>
+                  <td data-toggle="tooltip" data-container="body" data-placement="right" data-trigger="click" title="샘플 써보고 괜찮은거 같아서 주문 했는데 좁쌀 올라와요
+                    끊었다가 어제 아침에 다시 써봤는데 저녁에 좁쌀 올라왔더라구요">좁쌀이나요.</td>
+                  <td>so*****</td>
+                  <td>2018/03/27</td>
+                  <td>110</td>
+                </tr>
+                <tr>
+                  <th scope="row">9</th>
+                  <td data-toggle="tooltip" data-container="body" data-placement="bottom" data-trigger="click" title="안녕하세요 고객님.
+                    시드물 상담실 입니다.사카로 광채 앰플을 이용하시는데 불편을 드려 죄송합니다
+                    샘플에 만족하며 이용해주셨는데 지속적으로 사용하시면서
+                    부담이 느껴지신 것 같습니다 큰 불편을 드려 이용하시기 불편이 있을 것으로 생각됩니다
+                    시드물 고객만족팀에서 연락드려 사과드리고 불편 해결해드리겠습니다.감사합니다.">Re:안녕하세요 고객님. 시드물 상담실입니다.</td>
+                  <td>시드물</td>
+                  <td>2018/03/27</td>
+                  <td>38</td>
+                </tr>
+                <tr>
+                  <th scope="row">10</th>
+                  <td data-toggle="tooltip" data-container="body" data-placement="bottom" data-trigger="click" title="수부지 리뷰입니다.
+                    솔직히 지성이 무슨 광채야? 생각하시겠지만
+                    꾀재재해보이는 유분기거든요 이제품은 고급지게 귀티가 좔좔 얼굴에서 흘러나오게하는 제품입니다. ">피부속 조명을 탁 켜주는제품</td>
+                  <td>ne*****</td>
+                  <td>2018/03/23</td>
+                  <td>220</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <button type="button" class="btn-white">모두보기</button>
+          <button type="button" class="btn-white">상품후기 쓰기</button>
+          <button type="button" class="btn-black">더 보기</button>
+        </div>
         <!-- 제품문의 -->
-        <div class="box4">제품문의</div>
-
-
-
-
-
-
-
-
-
+        <div class="box4"><span class="skip">제품문의</span>
+          <div class="dotted-box">
+            <div>
+              <ul>
+                <li>Q&A 시드물 <strong>제품문의</strong>에 대해서 알려드립니다!</li>
+                <li>제품에 대하여 궁금하신 점을 문의주시면 답변 드리는 게시판입니다.</li>
+                <li>제품문의 글은 개인정보 보호와 관련법에 저촉이 되는 표현을 근본적으로 해결하기 위해 자동 잠금처리 됩니다.</li>
+                <li>시드물 제품문의는 임의적으로 수정하거나 삭제하지 않습니다.</li>
+                <li>올린글의 수정 및 삭제는 하단의 제품문의 수정 버튼과 ‘마이페이지 > 나의 게시글 보기’ 페이지에서 가능합니다.</li>
+              </ul>
+            </div>
+        </div>
+        <div class="bs-example" data-example-id="simple-table">
+          <table class="table table-hover">
+            <caption></caption>
+            <thead>
+              <tr>
+                <th>번호</th>
+                <th>제품문의</th>
+                <th>글쓴이</th>
+                <th>날짜</th>
+                <th>조회수</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>제품 문의</td>
+                <td>so*****</td>
+                <td>2018/03/26</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Re:안녕하세요 고객님. 시드물 상담실입니다.</td>
+                <td>시드물</td>
+                <td>2018/03/27</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>제품 문의</td>
+                <td>in*****</td>
+                <td>2018/03/26</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <th scope="row">4</th>
+                <td>Re:안녕하세요 고객님. 시드물 상담실입니다.</td>
+                <td>시드물</td>
+                <td>2018/03/27</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <th scope="row">5</th>
+                <td>제품 문의</td>
+                <td>sh*****</td>
+                <td>2018/03/25</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <th scope="row">6</th>
+                <td>Re:안녕하세요 고객님. 시드물 상담실입니다.</td>
+                <td>시드물</td>
+                <td>2018/03/27</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <th scope="row">7</th>
+                <td>제품 문의</td>
+                <td>ou*****</td>
+                <td>2018/03/26</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <th scope="row">8</th>
+                <td>Re:안녕하세요 고객님. 시드물 상담실입니다.</td>
+                <td>시드물</td>
+                <td>2018/03/27</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <th scope="row">9</th>
+                <td>제품 문의</td>
+                <td>ri*****</td>
+                <td>2018/03/24</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <th scope="row">10</th>
+                <td>Re:안녕하세요 고객님. 시드물 상담실입니다.</td>
+                <td>시드물</td>
+                <td>2018/03/27</td>
+                <td>1</td>
+              </tr>
+            </tbody>
+          </table>
+          <button type="button" class="btn-white">내문의 수정</button>
+          <button type="button" class="btn-white">제품문의 쓰기</button>
+          <button type="button" class="btn-black">더 보기</button>
+        </div>
+        <!-- 게시판 테이블 end -->
 
 
 
