--- a/F&B/F&B-010000.html
+++ b/F&B/F&B-010000.html
@@ -418,7 +418,7 @@
         <div class="sub-nav" id="accordion">
           <ul class="category">
             <li class="abo tab1"><a href="#">카테고리</a></li>
-            <div>
+            <div class="fnaviaccodi1">
               <li class="box active"><a href="#">WOMAN</a></li>
               <li class="box active"><a href="#">MAN</a></li>
               <li class="box active"><a href="#">KIDS</a></li>
@@ -426,8 +426,8 @@
             </div>
           </ul>
           <ul class="customer">
-            <li class="tab1"><a href="#">고객지원</a></li>
-            <div>
+            <li class="tab2"><a href="#">고객지원</a></li>
+            <div class="fnaviaccodi2">
               <li class="box"><a href="#">고객센터</a></li>
               <li class="box"><a href="#">개인정보 보호정책</a></li>
               <li class="box"><a href="#">매장찾기</a></li>
