css 수정(팝업아이콘,태블릿)

--- a/F&B/F&B-010000.html
+++ b/F&B/F&B-010000.html
@@ -61,10 +61,10 @@
             </dl>
           </div>
           <div class="sale">
-            <span>주문가격:</span>
-            <span>할인:</span>
-            <span>배송비:</span>
-            <span>합계:</span>
+            <span>주문가격 : &#8361;78,000</span>
+            <span>할인 : &#8361;2,500</span>
+            <span>배송비 : &#8361;2,500</span>
+            <span>합계 : &#8361;78,000</span>
           </div>
           <div class="btn-group">
             <button type="button">결제</button>
