--- a/F&B/F&B-010000.html
+++ b/F&B/F&B-010000.html
@@ -13,8 +13,6 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/F&B.css">
     <!-- script -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-
     <script src="js/jquery.min.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/F&B.js"></script>
@@ -462,6 +460,7 @@
       </div>
     </footer>
     <!-- jquery -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
   </body>
 </html>
