--- a/sidmool/sub.html
+++ b/sidmool/sub.html
@@ -364,35 +364,37 @@
                     <p class="info">100ml</p>
                   </div>
                 </div>
+                <!-- 옵션 -->
                 <div class="option_box">
 
                 </div>
                 <div class="button-wrap">
-                  <!-- <a href="#"><span>바로구매</span></a>
-                  <a href="#"><span>장바구니</span></a>
-                  <a href="#"><span>위시리스트</span></a> -->
                   <a href="#">바로구매</a>
                   <a href="#">장바구니</a>
                   <a href="#">위시리스트</a>
                 </div>
-                <div class="sub-sns">
-                  <a href="#"><span class="icon icon-facebook-rect"></span></a>
-                  <a href="#"><span class="icon icon-twitter-bird"></span></a>
-                  <a href="#"><span>URL</span></a>
-                </div>
-                <div class="etc-info-albtn">
-                  <dl>
-                    <dt>배송공지</dt>
-                    <dd>시드물에서는 빠른 배송을 위해
-                        월요일 오전10시, 화~금 낮1시, 토요일 오전9시까지
-                        입금 완료된 주문에 한해 당일 발송을 해드리고 있습니다.
-                        공휴일, 국경일, 연휴, 주말 이후 월~화요일,
-                        주문량이 증가하는 경우는 정해진 일정보다 1~2일
-                        늦어질 수 있습니다. 불편을 드려 죄송합니다.</dd>
-                  </dl>
-                  <button>제품 추천 Al [테스트버전]</button>
-                </div>
               </div>
+              <!-- 제품설명 end -->
+              <!-- 배송공지 start -->
+              <div class="etc-info-albtn">
+                <dl>
+                  <dt>배송공지</dt>
+                  <dd>시드물에서는 빠른 배송을 위해
+                      월요일 오전10시, 화~금 낮1시, 토요일 오전9시까지
+                      입금 완료된 주문에 한해 당일 발송을 해드리고 있습니다.<br>
+                      공휴일, 국경일, 연휴, 주말 이후 월~화요일,
+                      주문량이 증가하는 경우는 정해진 일정보다 1~2일
+                      늦어질 수 있습니다.<br> 불편을 드려 죄송합니다.</dd>
+                </dl>
+              </div>
+              <!-- 배송공지 end -->
+              <!-- sns -->
+              <div class="sub-sns">
+                <a href="#"><span class="icon icon-facebook-rect"></span></a>
+                <a href="#"><span class="icon icon-twitter-bird"></span></a>
+                <a href="#"><span>URL</span></a>
+              </div>
+              <button>제품 추천 Al [테스트버전]</button>
             </div>
           </div>
         </div>
