마크업 수정

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -159,7 +159,7 @@
                                     <i class="glyphicon glyphicon-link"></i>
                                     <p>F&B 자체 제작 홈페이지</p>
                                     <p>RESPONSIVE WEB</p>
-                                    <p>기획:이이슬. 퍼블리싱:전아름</p>
+                                    <p>DESIGN:LEE ISUL. PUBLISHING:JOEN AHRM</p>
                                 </div>
                             </div>
                         </div>
