--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -159,7 +159,8 @@
                                     <i class="glyphicon glyphicon-link"></i>
                                     <p>F&B 자체 제작 홈페이지</p>
                                     <p>RESPONSIVE WEB</p>
-                                    <p>DESIGN:LEE ISUL. PUBLISHING:JOEN AHRM</p>
+                                    <p>DESIGN : Lee Isul.</P>
+                                    <P>PUBLISHING : Joen Ahreum</p>
                                 </div>
                             </div>
                         </div>
