--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -193,7 +193,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="margin-top-0 wow fadeIn">CONTACT ME</h2>
                     <hr class="primary">
-                    <p>I love WEB PUBLISING. Fill out the form below and i will business with you</p>
+                    <p class="fotext">I love WEB PUBLISING. Fill out the form below and i will business with you</p>
                 </div>
               <div>
                 <div class="col-lg-6 wow fadeInUp delay-06s">
