--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/animate.min.css" />
     <link rel="stylesheet" href="./css/ionicons.min.css" />
-    <link rel="stylesheet" href="./css/portfolio.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -191,7 +190,7 @@
         <div class="container">
             <div class="row contact-rbga-padding">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="margin-top-0 wow fadeIn">CONTACT ME</h2>
+                    <h2 class="margin-top-0 wow fadeIn fotexth2">CONTACT ME</h2>
                     <hr class="primary">
                     <p class="fotext">I love WEB PUBLISING. Fill out the form below and i will business with you</p>
                 </div>
