--- a/sidmool/sub.html
+++ b/sidmool/sub.html
@@ -490,7 +490,7 @@
           <div class="dotted-box">
             <div>
               <ul>
-                <li><strong>REVIEW</strong>시드물 제품 리뷰에 대해 알려드립니다!</li>
+                <li class="boxtitle"><strong>REVIEW</strong>시드물 제품 리뷰에 대해 알려드립니다!</li>
                 <li>샘플 후기 또는 구매 내역이 없는 후기는 공정성을 위해서 자동으로 1:1 게시판으로 이동 됩니다.</li>
                 <li>자신의 피부타입, 사용기간, 사용하시는 제품등에 대한 자세한 내용을 함께 입력해주시면 다른 고객님들에게 더욱 큰 도움이 됩니다.</li>
               </ul>
@@ -620,7 +620,7 @@
           <div class="dotted-box">
             <div>
               <ul>
-                <li>Q&A 시드물 <strong>제품문의</strong>에 대해서 알려드립니다!</li>
+                <li class="boxtitle"><strong>Q&A</strong> 시드물 <strong>제품문의</strong>에 대해서 알려드립니다!</li>
                 <li>제품에 대하여 궁금하신 점을 문의주시면 답변 드리는 게시판입니다.</li>
                 <li>제품문의 글은 개인정보 보호와 관련법에 저촉이 되는 표현을 근본적으로 해결하기 위해 자동 잠금처리 됩니다.</li>
                 <li>시드물 제품문의는 임의적으로 수정하거나 삭제하지 않습니다.</li>
