--- a/sidmool/sub.html
+++ b/sidmool/sub.html
@@ -384,7 +384,7 @@
                       입금 완료된 주문에 한해 당일 발송을 해드리고 있습니다.<br>
                       공휴일, 국경일, 연휴, 주말 이후 월~화요일,
                       주문량이 증가하는 경우는 정해진 일정보다 1~2일
-                      늦어질 수 있습니다.<br> 불편을 드려 죄송합니다.</dd>
+                      늦어질 수 있습니다. 불편을 드려 죄송합니다.</dd>
                 </dl>
               </div>
               <!-- 배송공지 end -->
