--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,24 +40,36 @@
             </div>
         </div>
     </nav>
-    <header>
-      <div class="header-content">
-          <div class="inner">
-              <!-- <h1 class="">I AM AREUM JOEN</h1> -->
-              <h4>hopeful | dreaming | skillful WEB PUBLISHER</h4>
-          </div>
-      </div>
-      <div class="header-content-bg">
 
-      </div>
+    <!-- 메인 화면 start -->
+    <header>
+      <ul>
+        <li>
+          <a href="#">
+            <figure>
+              <img src="../assets/m-bg.jpg" alt="메인 백그라운드 이미지">
+            <figcaption>
+              <div class="pofol_txt_box">
+                <!-- <p>welcome to my world</p> -->
+                <!-- <p>I am Jeon Ahreum. enjoy my portfolio page</p> -->
+              </div>
+              <div class="heading">
+                <!-- <h2>WELCOME TO MY WORLD</h2> -->
+              </div>
+            </figcaption>
+            </figure>
+          </a>
+        </li>
+      </ul>
     </header>
-    <!-- PROFILE -->
+
+    <!-- profile start-->
     <section class="bg-primary" id="one">
         <div class="container wow fadeInRight">
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 text-center">
                     <p class="text-faded">
-                      안녕하세요!<BR> 도전을 멈추지 않는 웹 퍼블리셔, 전아름입니다.
+                      structural | essentiel | dreaming<BR>WEB PUBLISHER
                     </p>
                 </div>
             </div>
@@ -206,7 +218,7 @@
             <div class="row contact-rbga-padding">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="margin-top-0 wow fadeIn fotexth2">CONTACT ME</h2>
-                    <hr class="primary">                    
+                    <hr class="primary">
                 </div>
               <div>
                 <div class="col-lg-6 wow fadeInUp delay-06s">
