--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -200,8 +200,8 @@
                             <div class="gallery-box-content">
                                 <div>
                                     <i class="glyphicon glyphicon-link"></i>
-                                    <p>평광교회 청년부 <br>
-                                      웹사이트 및 상세페이지 제작 중</p>
+                                    <p>평광교회 청년부</p>
+                                    <p>웹사이트 및 상세페이지 제작 중</p>
                                     <p>PC</p>
                                 </div>
                             </div>
