--- a/portfolio-jar/index.html
+++ b/portfolio-jar/index.html
@@ -45,7 +45,6 @@
       <div class="header-content">
           <div class="inner">
               <h1 class="">I AM AREUM JOEN</h1>
-              <h4>POSITIVE | CREATING | DREAMING WEB PUBLISHER</h4>
           </div>
       </div>
       <div class="header-content-bg">
@@ -58,7 +57,7 @@
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 text-center">
                     <p class="text-faded">
-                      안녕하세요!<BR> 도전을 멈추지 않는 웹 퍼블리셔, 전아름입니다.
+                      structural | essentiel | dreaming<BR>WEB DESIGNER&amp;PUBLISHER
                     </p>
                 </div>
             </div>
@@ -205,7 +204,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="margin-top-0 wow fadeIn">CONTACT ME</h2>
                     <hr class="primary">
-                    <p>I love WEB PUBLISING. Fill out the form below and i will business with you</p>
+                    <p>I love WEB activity. Fill out the form below and i will business with you</p>
                 </div>
               <div>
                 <div class="col-lg-6 wow fadeInUp delay-06s">
