스펠링오타수정

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -44,7 +44,7 @@
     <header id="first">
       <div class="header-content">
           <div class="inner">
-              <h1 class="">I AM AREUM JOEN</h1>
+              <h1 class="">I AM AREUM JEON</h1>
           </div>
       </div>
       <div class="header-content-bg">
@@ -57,7 +57,7 @@
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 text-center">
                     <p class="text-faded">
-                      structural | essentiel | dreaming<BR>WEB DESIGNER&amp;PUBLISHER
+                      structural | essential | dreaming<BR>WEB DESIGNER&amp;PUBLISHER
                     </p>
                 </div>
             </div>
